@@ -2,6 +2,8 @@ Version 1.7.11+svn:
  * Language and i18n:
    * Updated translations: Finnish, German, Italian, Latin, Russian,
      Shavian
+ * Multiplayer:
+   * Non-human null controllers are no longer set to ai
  * User interface:
    * Switched back to the tiled background for gui2
  * Miscellaneous and bugfixes:
